[tool.poetry]
name = "s3-backup-rotate"
version = "0.1.0"
description = "Rotate backups stored on S3"
authors = ["Benjamin Bergia <benjamin.bergia@cern.ch>"]

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.14.30"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
